@@ -365,36 +365,24 @@ class RendererHelper(object):
             response.body = result
 
         if request is not None:
-            # deprecated mechanism to set up request.response_* attrs
+            # deprecated mechanism to set up request.response_* attrs, see
+            # pyramid.request.Request
             attrs = request.__dict__
-            content_type = attrs.get('response_content_type', None)
+            content_type = attrs.get('_response_content_type', None)
             if content_type is not None:
                 response.content_type = content_type
-                deprecate_req_attr('Setting', 'content_type',
-                                   'set', 'content_type')
-            headerlist = attrs.get('response_headerlist', None)
+            headerlist = attrs.get('_response_headerlist', None)
             if headerlist is not None:
                 for k, v in headerlist:
                     response.headers.add(k, v)
-                deprecate_req_attr('Setting or mutating', 'headerlist',
-                                   'set or mutate', 'headerlist')
-            status = attrs.get('response_status', None)
+            status = attrs.get('_response_status', None)
             if status is not None:
                 response.status = status
-                deprecate_req_attr('Setting', 'status', 'set', 'status')
-            charset = attrs.get('response_charset', None)
+            charset = attrs.get('_response_charset', None)
             if charset is not None:
                 response.charset = charset
-                deprecate_req_attr('Setting', 'charset', 'set', 'charset')
-            cache_for = attrs.get('response_cache_for', None)
+            cache_for = attrs.get('_response_cache_for', None)
             if cache_for is not None:
                 response.cache_expires = cache_for
-                deprecate_req_attr('Setting', 'cache_for',
-                                   'set', 'cache_expires')
-
         return response
 
-def deprecate_req_attr(*args):
-    depwarn = ('%s "request.response_%s" is deprecated as of Pyramid 1.1; %s '
-               '"request.response.%s" instead.')
-    warnings.warn(depwarn % args, DeprecationWarning, 3)
